--- a/field-analysis_251023.ipynb
+++ b/field-analysis_251023.ipynb
@@ -273,7 +273,7 @@
     "    _map.map_pct(df=df, out_dir=out_dir, grid_size=5, sample_min=0)\n",
     "    _map.map_pct(df=df, out_dir=out_dir, grid_size=25, sample_min=0)\n",
     "    _map.map_db(df=df, out_dir=out_dir, grid_size=25, sample_min=0)\n",
-    "    _map.map_coverage(df=df, out_dir=out_dir, grid_size=25, sample_min=0)"
+    "    # _map.map_coverage(df=df, out_dir=out_dir, grid_size=25, sample_min=0)"
    ]
   },
   {
