--- a/field-analysis_251023.ipynb
+++ b/field-analysis_251023.ipynb
@@ -239,13 +239,11 @@
      "text": [
       "Reading logs/SM-S938N_Huam_415-1.xlsx\n",
       "✅ Read Complete\n",
-      "Saved: results/map_Huam_415-1/date_all/5m_DL_Tput.html (rows=663)\n",
-      "Saved: results/map_Huam_415-1/date_all/25m_DL_Tput.html (rows=74)\n",
-      "Saved: results/map_Huam_415-1/date_all/25m_RSRP.html (rows=74)\n",
-      "Saved: results/map_Huam_415-1/date_all/25m_SINR.html (rows=74)\n",
-      "Saved: results/map_Huam_415-1/date_all/temp/RSRP_n26.html (rows=74)\n",
-      "Saved: results/map_Huam_415-1/date_all/temp/RSRP_n28.html (rows=74)\n",
-      "Saved: results/map_Huam_415-1/date_all/25m_RSRP_cmpr.html\n"
+      "Saved: results/map_Huam_415-1/date_all/5m_DL_Tput_ratio.html (rows=663)\n",
+      "Saved: results/map_Huam_415-1/date_all/25m_DL_Tput_ratio.html (rows=74)\n",
+      "Saved: results/map_Huam_415-1/date_all/25m_RSRP_diff.html (rows=74)\n",
+      "Saved: results/map_Huam_415-1/date_all/25m_SINR_diff.html (rows=74)\n",
+      "Saved: results/map_Huam_415-1/date_all/25m_RSRP_n28.html (rows=74)\n"
      ]
     }
    ],
@@ -273,7 +271,7 @@
     "    _map.map_pct(df=df, out_dir=out_dir, grid_size=5, sample_min=0)\n",
     "    _map.map_pct(df=df, out_dir=out_dir, grid_size=25, sample_min=0)\n",
     "    _map.map_db(df=df, out_dir=out_dir, grid_size=25, sample_min=0)\n",
-    "    # _map.map_coverage(df=df, out_dir=out_dir, grid_size=25, sample_min=0)"
+    "    _map.map_coverage(df=df, out_dir=out_dir, grid_size=25, sample_min=0)"
    ]
   },
   {
@@ -288,13 +286,11 @@
      "text": [
       "Reading logs/SM-S938N_Huam_345-5.xlsx\n",
       "✅ Read Complete\n",
-      "Saved: results/map_Huam_345-5/date_all/5m_DL_Tput.html (rows=1318)\n",
-      "Saved: results/map_Huam_345-5/date_all/25m_DL_Tput.html (rows=173)\n",
-      "Saved: results/map_Huam_345-5/date_all/25m_RSRP.html (rows=173)\n",
-      "Saved: results/map_Huam_345-5/date_all/25m_SINR.html (rows=173)\n",
-      "Saved: results/map_Huam_345-5/date_all/temp/RSRP_n26.html (rows=173)\n",
-      "Saved: results/map_Huam_345-5/date_all/temp/RSRP_n28.html (rows=173)\n",
-      "Saved: results/map_Huam_345-5/date_all/25m_RSRP_cmpr.html\n"
+      "Saved: results/map_Huam_345-5/date_all/5m_DL_Tput_ratio.html (rows=1318)\n",
+      "Saved: results/map_Huam_345-5/date_all/25m_DL_Tput_ratio.html (rows=173)\n",
+      "Saved: results/map_Huam_345-5/date_all/25m_RSRP_diff.html (rows=173)\n",
+      "Saved: results/map_Huam_345-5/date_all/25m_SINR_diff.html (rows=173)\n",
+      "Saved: results/map_Huam_345-5/date_all/25m_RSRP_n28.html (rows=173)\n"
      ]
     }
    ],
