--- a/field-analysis_251023.ipynb
+++ b/field-analysis_251023.ipynb
@@ -351,6 +351,88 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "da4949c1-8302-4b63-ba3d-b273de1c930b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading logs/SM-S938N_Namsan.xlsx\n",
+      "✅ Read Complete\n",
+      "Saved: results/map_Namsan/date_all/5m_DL_Tput_ratio.html (rows=274)\n",
+      "Saved: results/map_Namsan/date_all/25m_DL_Tput_ratio.html (rows=36)\n",
+      "Saved: results/map_Namsan/date_all/25m_RSRP_diff.html (rows=36)\n",
+      "Saved: results/map_Namsan/date_all/25m_SINR_diff.html (rows=36)\n",
+      "Saved: results/map_Namsan/date_all/25m_RSRP_n28.html (rows=36)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os, _common, _map, _plot, _trend\n",
+    "\n",
+    "site_list = [\n",
+    "    'Namsan',\n",
+    "]\n",
+    "for site in site_list:\n",
+    "    df = _common.analyze_kpi(\n",
+    "        fname = os.path.join(\"logs\",f\"SM-S938N_{site}.xlsx\"),\n",
+    "        date_list = [\n",
+    "            \"251021\",\n",
+    "        ],\n",
+    "        rb_min=48\n",
+    "    )\n",
+    "\n",
+    "    out_dir = os.path.join(\"results\", f\"map_{site}\", \"date_all\")\n",
+    "    os.makedirs(out_dir, exist_ok=True)\n",
+    "    \n",
+    "    _map.map_pct(df=df, out_dir=out_dir, grid_size=5, sample_min=0)\n",
+    "    _map.map_pct(df=df, out_dir=out_dir, grid_size=25, sample_min=0)\n",
+    "    _map.map_db(df=df, out_dir=out_dir, grid_size=25, sample_min=0)\n",
+    "    _map.map_coverage(df=df, out_dir=out_dir, grid_size=25, sample_min=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "92f2a8c9-c5f0-4f30-9a4a-11755a262afa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading logs/SM-S938N_All.xlsx\n",
+      "✅ Read Complete\n",
+      "Saved: results/map_All/date_all/5m_DL_Tput_ratio.html (rows=2255)\n",
+      "Saved: results/map_All/date_all/25m_DL_Tput_ratio.html (rows=283)\n",
+      "Saved: results/map_All/date_all/25m_RSRP_diff.html (rows=283)\n",
+      "Saved: results/map_All/date_all/25m_SINR_diff.html (rows=283)\n",
+      "Saved: results/map_All/date_all/25m_RSRP_n28.html (rows=283)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os, _common, _map, _plot, _trend\n",
+    "\n",
+    "df = _common.analyze_kpi(\n",
+    "    fname = os.path.join(\"logs\",f\"SM-S938N_All.xlsx\"),\n",
+    "    date_list = [], # all\n",
+    "    rb_min=48\n",
+    ")\n",
+    "\n",
+    "out_dir = os.path.join(\"results\", f\"map_All\", \"date_all\")\n",
+    "os.makedirs(out_dir, exist_ok=True)\n",
+    "\n",
+    "_map.map_pct(df=df, out_dir=out_dir, grid_size=5, sample_min=0)\n",
+    "_map.map_pct(df=df, out_dir=out_dir, grid_size=25, sample_min=0)\n",
+    "_map.map_db(df=df, out_dir=out_dir, grid_size=25, sample_min=0)\n",
+    "_map.map_coverage(df=df, out_dir=out_dir, grid_size=25, sample_min=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "cfcc652f-6dc3-40d1-8e4c-1e1587c06c03",
    "metadata": {},
    "outputs": [],
