--- a/field-analysis_251024.ipynb
+++ b/field-analysis_251024.ipynb
@@ -409,7 +409,7 @@
     "for site in site_list:\n",
     "    df = _common.analyze_kpi(\n",
     "        fname = os.path.join(\"logs\",f\"SM-S938N_{site}.xlsx\"),\n",
-    "        date_list = [],\n",
+    "        date_list = [], # all\n",
     "        rb_min=48\n",
     "    )\n",
     "\n",
